--- a/package.json
+++ b/package.json
@@ -2,13 +2,19 @@
   "name": "audioplayer",
   "version": "0.0.0",
   "private": true,
+  "description": "AudioPlayer is an audio player ;).",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "electron": "vite build && electron ."
+    "electron": "vite build && electron .",
+    "start": "electron-forge start",
+    "package": "electron-forge package",
+    "make": "electron-forge make --platform linux --targets=@electron-forge/maker-deb",
+    "make-linux": "npx @electron-forge/cli make --platform linux"
   },
   "dependencies": {
+    "electron-squirrel-startup": "^1.0.0",
     "lodash": "^4.17.21",
     "simple-json-db": "^2.0.0",
     "vue": "^3.3.4",
@@ -17,6 +23,12 @@
     "ytdl-core": "^4.11.4"
   },
   "devDependencies": {
+    "@electron-forge/cli": "^6.2.1",
+    "@electron-forge/maker-deb": "^6.2.1",
+    "@electron-forge/maker-rpm": "^6.2.1",
+    "@electron-forge/maker-squirrel": "^6.2.1",
+    "@electron-forge/maker-zip": "^6.2.1",
+    "@electron-forge/plugin-auto-unpack-natives": "^6.2.1",
     "@vitejs/plugin-vue": "^4.2.3",
     "electron": "^25.2.0",
     "vite": "^4.3.9"
