--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
     "build": "vite build",
     "preview": "vite preview",
     "electron": "vite build && electron .",
-    "start": "electron-forge start",
+    "start": "vite build && electron-forge start",
     "package": "electron-forge package",
-    "make": "electron-forge make --platform linux --targets=@electron-forge/maker-deb",
-    "make-linux": "npx @electron-forge/cli make --platform linux"
+    "make-linux": "electron-forge make --platform linux --targets=@electron-forge/maker-deb"
   },
   "dependencies": {
     "electron-squirrel-startup": "^1.0.0",
+    "ffmpeg-static": "^5.1.0",
+    "ffprobe-static": "^3.1.0",
+    "fluent-ffmpeg": "^2.1.2",
     "lodash": "^4.17.21",
     "simple-json-db": "^2.0.0",
     "vue": "^3.3.4",
@@ -33,5 +35,12 @@
     "electron": "^25.2.0",
     "vite": "^4.3.9"
   },
-  "main": "main.js"
+  "main": "main.js",
+  "build":{
+    "asarUnpack":[
+      "node_modules/ffmpeg-static/bin/${os}/${arch}/ffmpeg",
+      "node_modules/ffmpeg-static/index.js",
+      "node_modules/ffmpeg-static/package.json"
+      ]
+  }
 }
