--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "make-linux": "electron-forge make --platform linux --targets=@electron-forge/maker-deb"
   },
   "dependencies": {
-    "electron-squirrel-startup": "^1.0.0",
     "ffmpeg-static": "^5.1.0",
     "ffprobe-static": "^3.1.0",
     "fluent-ffmpeg": "^2.1.2",
@@ -35,12 +34,5 @@
     "electron": "^25.2.0",
     "vite": "^4.3.9"
   },
-  "main": "main.js",
-  "build":{
-    "asarUnpack":[
-      "node_modules/ffmpeg-static/bin/${os}/${arch}/ffmpeg",
-      "node_modules/ffmpeg-static/index.js",
-      "node_modules/ffmpeg-static/package.json"
-      ]
-  }
+  "main": "main.js"
 }
